[gd_scene load_steps=5 format=2]

[ext_resource path="res://throwables/ThrowableObject.gd" type="Script" id=1]
[ext_resource path="res://sfx/hitting.wav" type="AudioStream" id=2]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.2

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[node name="ThrowableObject" type="RigidBody2D"]
collision_layer = 2
collision_mask = 7
mass = 300.0
physics_material_override = SubResource( 1 )
contacts_reported = 3
contact_monitor = true
sleeping = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="SelectableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectableArea"]
shape = SubResource( 2 )

[node name="ImpulseTime" type="Timer" parent="."]
wait_time = 0.3

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="body_entered" from="." to="." method="_on_ThrowableObject_body_entered"]
[connection signal="sleeping_state_changed" from="." to="." method="_on_ThrowableObject_sleeping_state_changed"]
[connection signal="input_event" from="SelectableArea" to="." method="_on_SelectableArea_input_event"]
[connection signal="timeout" from="ImpulseTime" to="." method="_on_ImpulseTime_timeout"]
